common-applications/test-environment/mindspore-website-test/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: mindspore-website
  name: mindspore-website
