common-applications/test-environment/mindspore-website-test/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mindspore-website
  namespace: mindspore-website
spec:
  selector:
    matchLabels:
      app: mindspore-website
  template:
    metadata:
      labels:
        app: mindspore-website
    spec:
      imagePullSecrets:
      - name: huawei-swr-image-pull-secret
      nodeSelector:
        autoscaler: "true"
      containers:
      - name: website
        image: swr.ap-southeast-1.myhuaweicloud.com/infra-hk/mindspore-website-test:master-de7e6c
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 200m
            memory: 200Mi
        livenessProbe:
          failureThreshold: 3
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 8080
          timeoutSeconds: 5
        readinessProbe:
          failureThreshold: 3
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 8080
          timeoutSeconds: 5
