common-applications/test-environment/mindspore-website-test/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mindspore-website-service
  namespace: mindspore-website
spec:
  ports:
    - name: http-port
      protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: mindspore-website
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubernetes.io/elb.class: union
    kubernetes.io/elb.id: d0232fe1-6fb6-483a-8d22-c54d9fbb2a8c
    kubernetes.io/elb.lb-algorithm: ROUND_ROBIN
  name: mindspore-website-loadbalencer
  namespace: mindspore-website
spec:
  externalTrafficPolicy: Cluster
  ports:
  - name: httpport
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: mindspore-website
  sessionAffinity: None
  type: LoadBalancer
