common-applications/test-environment/mindspore-website-test/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx   
  name: mindspore-website-ingress
  namespace: mindspore-website
spec:
  tls:
    - hosts:
        - mindspore.test.osinfra.cn
      secretName: mindspore-website-tls
  rules:
    - host: mindspore.test.osinfra.cn
      http:
        paths:
          - backend:
              serviceName: mindspore-website-service
              servicePort: 80
            path: /
